fixed styling for rolltemplates

--- a/Ironcrunch/Ironcrunch.css
+++ b/Ironcrunch/Ironcrunch.css
@@ -12,6 +12,9 @@
   margin: 0 auto !important;
   padding: 15px;
 }
+.charactersheet.tab-pane {
+  width: 842px !important;
+}
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
