--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -1,20 +1,14 @@
 // Fonts
 @css {
-  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-  @import url('https://fonts.googleapis.com/css?family=Montserrat');
-  @import url('https://fonts.googleapis.com/css?family=Lora');
-  @import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
-  @import url('https://fonts.googleapis.com/css?family=Arimo');
-  @import url('https://fonts.googleapis.com/css?family=Crimson+Text');
-  @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
-  @import url('https://fonts.googleapis.com/css?family=Amiri');
+  @import url('https://fonts.googleapis.com/css?family=Montserrat|Crimson+Text|Roboto&display=swap');
 }
 
 // Sheet Core
 .charsheet
-  width: 842px !important
-  margin: 0 auto !important
-  padding: 15px
+  width 842px !important
+  margin 0 auto !important
+  padding 15px
+  font-family: Montserrat, arial, sans-serif
 
 select
   -webkit-appearance: none
@@ -26,10 +20,9 @@ select::-ms-expand
   display: none
 
 p
-  font-family: Verdana, arial, sans-serif
+  font-family: 'Crimson Text', Verdana, arial, sans-serif
 
 h1
-  font-family: arial, sans-serif
   font-weight: bold
   width: 100%
   font-size: 28px
@@ -39,7 +32,6 @@ h1
   text-transform: uppercase
 
 h2
-  font-family: arial, sans-serif
   font-weight: bold
   width: 100%
   font-size: 18px
@@ -49,7 +41,6 @@ h2
   text-transform: uppercase
 
 h3
-  font-family: arial, sans-serif
   font-weight: bold
   width: 100%
   line-height: 24px
@@ -99,7 +90,6 @@ h3.sheet-site-divide-notes::before
   width: 352px
 
 h4
-  font-family: arial, sans-serif
   font-weight: bold
   width: 100%
   font-size: 16px
@@ -112,7 +102,6 @@ h4.sheet-tab-title
   display: inline-block
 
 h5
-  font-family: arial, sans-serif
   font-weight: bold
   font-size: 12px
   text-align: left
@@ -152,6 +141,9 @@ hr
   height: 1px
   background: #ccc
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
+
+textarea
+  font-family: 'Crimson Text', arial, sans-serif
 
 // Components
 @import './components/resources/resources'
@@ -213,7 +205,6 @@ hr
   color: white
 
 .sheet-track-box-value
-  font-family: arial, sans-serif
   padding: 0px
   font-weight: bold
   height: 35px
@@ -222,7 +213,6 @@ hr
   color: inherit
 
 .sheet-resources-box-value
-  font-family: arial, sans-serif
   padding: 0px
   font-weight: bold
   height: 35px
@@ -257,7 +247,6 @@ hr
 
 .sheet-pc-name
   width: 100%
-  font-family: arial, sans-serif
   font-weight: bold
   font-size: 14px
   border: 2px solid #4C4D4F
@@ -267,7 +256,6 @@ hr
 
 .sheet-debil-desc
   width: 100%
-  font-family: arial, sans-serif
   font-weight: bold
   font-size: 14px
 
@@ -361,7 +349,6 @@ span.sheet-showhide
   margin-right: 11px
   border-radius: 4px
   padding: 2px 4px
-  font-family: arial, sans-serif
   font-weight: bold
   font-size: 14px
 
@@ -851,7 +838,6 @@ div.sheet-assets .repcontainer .repitem
 .sheet-asset-type-dropdown
   color: white
   background: #414042
-  font-family: arial, sans-serif
   width: auto
   font-size: 15px
   font-weight: bold
@@ -950,7 +936,6 @@ input.sheet-border-bottom
 
 p.sheet-bond-title
   text-align: left
-  font-family: arial, sans-serif
   font-weight: bold
   font-size: 16px
   margin: 0 0 0px
@@ -997,7 +982,6 @@ span.sheet-show-bond-info
   border-radius: 4px
   padding: 2px 4px
   border: 1px solid
-  font-family: arial, sans-serif
   font-weight: bold
 
 .sheet-full-width
