--- a/Ironcrunch/src/components/details/details.pug
+++ b/Ironcrunch/src/components/details/details.pug
@@ -4,14 +4,14 @@ div.sheet-character-details
     div.sheet-character-detail
       p Ancestry
       input(type='text' name='attr_ancestry' placeholder='Ancestry')
-    //- Sex
-    div.sheet-character-detail
-      p Sex
-      input(type='text' name='attr_sex' placeholder='Sex')
-    //- Age
-    div.sheet-character-detail
-      p Age
-      input(type='text' name='attr_age' placeholder='age')
+    //- Sex & Age
+    div.sheet-character-detail.sheet-detail-columns
+      div.sheet-detail-column
+        p Sex
+        input(type='text' name='attr_sex' placeholder='Sex')
+      div.sheet-detail-column
+        p Age
+        input(type='text' name='attr_age' placeholder='age')
     //- Speed
     div.sheet-character-detail
       p Speed
