--- a/Ironcrunch/src/components/momentum/momentum.pug
+++ b/Ironcrunch/src/components/momentum/momentum.pug
@@ -3,7 +3,21 @@ div.sheet-footer
   div.sheet-momentum
       each object in momentumPositiveTrack 
         div.sheet-momentum-box
-          input(type='radio' name='attr_momentum' class='sheet-momentum-box-input' value=object.value)
+          if object.checked
+            input(
+            type='radio'
+            name='attr_momentum'
+            class='sheet-momentum-box-input'
+            value=object.value
+            checked
+          )
+          else
+            input(
+              type='radio'
+              name='attr_momentum'
+              class='sheet-momentum-box-input'
+              value=object.value
+            )
           div.sheet-momentum-box-back
             h3.sheet-momentum-box-value=object.text
 
