--- a/Ironcrunch/src/components/momentum/tracks.pug
+++ b/Ironcrunch/src/components/momentum/tracks.pug
@@ -18,7 +18,7 @@
     { value: '5', text: '+5' }, 
     { value: '4', text: '+4' }, 
     { value: '3', text: '+3' }, 
-    { value: '2', text: '+2' }, 
+    { value: '2', text: '+2', checked: true }, 
     { value: '1', text: '+1' }, 
     { value: '0', text: '0' }, 
   ]
