--- a/Ironcrunch/src/components/nav/nav-bar.pug
+++ b/Ironcrunch/src/components/nav/nav-bar.pug
@@ -1,12 +1,14 @@
 - 
   var pages = [
-    { id: 'sheet-summary', text: 'Summary' },
-    { id: 'sheet-vows', text: 'Vows' },
-    { id: 'sheet-bonds', text: 'Bonds' },
-    { id: 'sheet-proficiencies', text: 'Proficiencies' }
+    { id: 'summary', text: 'Summary' },
+    { id: 'vows', text: 'Vows' },
+    { id: 'bonds', text: 'Bonds' },
+    { id: 'proficiencies', text: 'Proficiencies' }
   ]
 
 div.sheet-nav-bar
   each page in pages 
     div.sheet-nav-child
-      label(for=page.id)=page.text
+      label.sheet-page-label
+        input(type='checkbox' name=`attr_ironcrunch_${page.id}_button` class='sheet-hide sheet-page-button')
+        div.sheet-page-button-back=page.text
