--- a/Ironcrunch/src/components/resources/resources.pug
+++ b/Ironcrunch/src/components/resources/resources.pug
@@ -32,7 +32,7 @@ div.sheet-resources
 
   div.sheet-resource
     h2.sheet-resource-title LOAD
-    select(class="sheet-resource-value" name='attr_load')
+    select(class="sheet-resource-value sheet-load-value" name='attr_load')
       each val in trackValuesTwelve
         option(value=val)=val
   
