--- a/Ironcrunch/src/components/resources/resources.styl
+++ b/Ironcrunch/src/components/resources/resources.styl
@@ -60,3 +60,6 @@ input[type=text].sheet-resource-value
 .sheet-health-status-box
   display flex
   border 2px solid #4C4D4F
+
+.sheet-load-value
+  width 27px
