--- a/Ironcrunch/src/pages/bonds.pug
+++ b/Ironcrunch/src/pages/bonds.pug
@@ -1,4 +1,4 @@
-input(type="radio" name="attr_ironcrunch-page" id="sheet-bonds" class="sheet-hide sheet-bonds" value="2")
+input(type='checkbox' name='attr_ironcrunch_bonds_page' class='sheet-bonds sheet-hide')
 div.sheet-bonds.sheet-hide
   h3.sheet-divide &emsp;BONDS&emsp;
   include ../components/bonds/track
