--- a/Ironcrunch/src/pages/proficiencies.pug
+++ b/Ironcrunch/src/pages/proficiencies.pug
@@ -1,4 +1,4 @@
-input(type='radio' name='attr_ironcrunch-page' id='sheet-proficiencies' class='sheet-hide sheet-proficiencies' value='4')
+input(type='checkbox' name='attr_ironcrunch_proficiencies_page' class='sheet-proficiencies sheet-hide')
 div.sheet-proficiencies.sheet-hide
-  h3.sheet-divide &emsp;PROFICIENCIES&emsp;
+  h3.sheet-divide &emsp;WEAPON PROFICIENCIES&emsp;
   include ../components/proficiencies/weapons
