--- a/Ironcrunch/src/pages/summary.pug
+++ b/Ironcrunch/src/pages/summary.pug
@@ -1,4 +1,4 @@
-input(type="radio" name="attr_ironcrunch-page" id="sheet-summary" class="sheet-hide sheet-summary" value="1" checked)
+input(type='checkbox' name='attr_ironcrunch_summary_page' class='sheet-summary sheet-hide' checked)
 div.sheet-summary.sheet-hide
   include ../components/details/details
   include ../components/stats/stats
