--- a/Ironcrunch/src/roll-templates/mixins/outcomes.pug
+++ b/Ironcrunch/src/roll-templates/mixins/outcomes.pug
@@ -1,19 +1,19 @@
 mixin opportunity
   tr
-    td(colspan="2" class="sheet-subfooter sheet-opportunity") Opportunity
+    td(colspan="2" class="sheet-subfooter sheet-opportunity") OPPORTUNITY
 
 mixin strongHit
   tr
-    td(colspan="2" class="sheet-subfooter sheet-strong-hit") Strong Hit
+    td(colspan="2" class="sheet-subfooter sheet-strong-hit") STRONG HIT
 
 mixin weakHit
   tr
-    td(colspan="2" class="sheet-subfooter sheet-weak-hit") Weak Hit
+    td(colspan="2" class="sheet-subfooter sheet-weak-hit") WEAK HIT
 
 mixin miss
   tr
-    td(colspan="2" class="sheet-subfooter sheet-miss") Miss
+    td(colspan="2" class="sheet-subfooter sheet-miss") MISS
 
 mixin complication
   tr
-    td(colspan="2" class="sheet-subfooter sheet-complication") Complication
+    td(colspan="2" class="sheet-subfooter sheet-complication") COMPLICATION
