--- a/Ironcrunch/src/roll-templates/moves/moves.styl
+++ b/Ironcrunch/src/roll-templates/moves/moves.styl
@@ -3,7 +3,7 @@
 .sheet-rolltemplate-ironcrunch_moves table>tfoot>tr>th,
 .sheet-rolltemplate-ironcrunch_moves table>thead>tr>td,
 .sheet-rolltemplate-ironcrunch_moves table>tbody>tr>td,
-.sheet-rolltemplate-ironcrunch_moves table>tfoot>tr>td,
+.sheet-rolltemplate-ironcrunch_moves table>tfoot>tr>td
   padding: 4px
   border: none
 
@@ -12,7 +12,7 @@
   border: 1px solid
   color: #4C4D4F
   font-size: 1em
-  font-family: Verdana, Arial, sans-serif
+  font-family: Roboto, Verdana, Arial, sans-serif
   margin: 0px
 
 .sheet-rolltemplate-ironcrunch_moves th
@@ -27,22 +27,18 @@
   background-color: #434b4d
   color: #ffffff
   line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
+  font-family: Roboto, Verdana, arial, sans-serif
   font-style: italic
-  font-weight: bold
+  font-weight: 900
   text-align: left
   padding: 0.5rem
 
 .sheet-rolltemplate-ironcrunch_moves .sheet-subfooter
   background-color: #b9b9b6
   line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
+  font-family: Roboto, Verdana, arial, sans-serif
   font-style: italic
-  font-weight: bold
+  font-weight: 900
   text-align: left
 
 .sheet-rolltemplate-ironcrunch_moves .sheet-alert
@@ -70,7 +66,7 @@
   background-color: #761818
 
 .sheet-rolltemplate-ironcrunch_moves .userscript-tcat
-  font-weight: bold
+  font-weight: 900
 
 .sheet-rolltemplate-ironcrunch_moves td
   padding: 5px
