--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -1,6 +1,23 @@
 // .sheet-character-details
 
 .sheet-details-row
-  display: flex;
+  display flex
+  justify-content space-evenly
 
-// .sheet-character-detail
+.sheet-character-detail
+  border 2px solid #4C4D4F
+  width 100%
+  padding: 0em 1em 0em 1em;
+  p
+    width 100%
+    font-family Montserrat, arial, sans-serif
+    margin 0
+  input
+    width 100%
+    border 0
+
+.sheet-detail-columns
+  display flex
+
+.sheet-detail-column
+  width 50%
