--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -1,11 +1,32 @@
 .sheet-nav-bar
   display flex
+  justify-content space-evenly
+  margin-top 0.5em
 
-// .sheet-nav-child
+.sheet-nav-child
+  border 2px solid #4C4D4F
+  width 100%
+  text-align-last center
+  label
+    margin 0
+    padding 0
+    cursor pointer
+    &:hover
+      background #ccc
 
-input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
-input[type=radio].sheet-summary:checked ~ div.sheet-summary,
-input[type=radio].sheet-vows:checked ~ div.sheet-vows,
-input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
+.sheet-page-button-back
+  padding 0.1em 0em 0.1em 0em
+
+.sheet-page-button:checked ~ div.sheet-page-button-back
+  background #4C4D4F
+  color: white
+
+input[type=checkbox].sheet-bonds:checked ~ div.sheet-bonds,
+input[type=checkbox].sheet-summary:checked ~ div.sheet-summary,
+input[type=checkbox].sheet-vows:checked ~ div.sheet-vows,
+input[type=checkbox].sheet-proficiencies:checked ~ div.sheet-proficiencies
   display block
+
+.sheet-summary
+  margin-top 1em
 
