--- a/Ironcrunch/src/components/stats/stats.styl
+++ b/Ironcrunch/src/components/stats/stats.styl
@@ -4,6 +4,7 @@
   align-items: center
   border-radius: 0%
   margin-bottom: 2px
+  margin-top 1em
 
 .sheet-stat
   display: flex
@@ -15,7 +16,6 @@
   width: 100px
 
 .sheet-stats-input
-  font-family: arial, sans-serif
   font-weight: bold
   width: 60px
   line-height: 40px
