--- a/Ironcrunch/src/pages/vows.pug
+++ b/Ironcrunch/src/pages/vows.pug
@@ -1,4 +1,4 @@
-input(type="radio" name="attr_ironcrunch-page" id="sheet-vows" class="sheet-hide sheet-vows" value="3")
+input(type='checkbox' name='attr_ironcrunch_vows_page' class='sheet-vows sheet-hide')
 div.sheet-vows.sheet-hide
   h3.sheet-divide &emsp;VOWS&emsp;
   include ../components/vows/vows
