--- a/Ironcrunch/src/roll-templates/progress/progress.styl
+++ b/Ironcrunch/src/roll-templates/progress/progress.styl
@@ -12,7 +12,7 @@
   border: 1px solid
   color: #4C4D4F
   font-size: 1em
-  font-family: Verdana, Arial, sans-serif
+  font-family: Roboto, Verdana, arial, sans-serif
   margin: 0px
 
 .sheet-rolltemplate-ironcrunch_progress th
@@ -27,22 +27,18 @@
   background-color: #434b4d
   color: #ffffff
   line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
+  font-family: Roboto, Verdana, arial, sans-serif
   font-style: italic
-  font-weight: bold
+  font-weight: 900
   text-align: left
   padding: 0.5rem
 
 .sheet-rolltemplate-ironcrunch_progress .sheet-subfooter
   background-color: #b9b9b6
   line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
+  font-family: Roboto, Verdana, arial, sans-serif
   font-style: italic
-  font-weight: bold
+  font-weight: 900
   text-align: left
 
 .sheet-rolltemplate-ironcrunch_progress .sheet-alert
@@ -70,7 +66,7 @@
   background-color: #761818
 
 .sheet-rolltemplate-ironcrunch_progress .userscript-tcat
-  font-weight: bold
+  font-weight: 900
 
 .sheet-rolltemplate-ironcrunch_progress td
   padding: 5px
