--- a/Ironcrunch/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/workers/Ironcrunch.pug
@@ -174,6 +174,78 @@ script(type="text/worker")
   |     });
   | });
 
+  | on('change:ironcrunch_summary_button', function(eventinfo) {
+  |   if (eventinfo.newValue == 'on') {
+  |     setAttrs({
+  |       ironcrunch_bonds_button: 'off',
+  |       ironcrunch_vows_button: 'off',
+  |       ironcrunch_proficiencies_button: 'off',
+  |       ironcrunch_bonds_page: 'off',
+  |       ironcrunch_vows_page: 'off',
+  |       ironcrunch_proficiencies_page: 'off',
+  |       ironcrunch_summary_page: 'on'
+  |     });
+  |   } else {
+  |     setAttrs({
+  |       ironcrunch_summary_page: 'off'
+  |     });
+  |   };
+  | });
+
+  | on('change:ironcrunch_vows_button', function(eventinfo) {
+  |   if (eventinfo.newValue == 'on') {
+  |     setAttrs({
+  |       ironcrunch_bonds_button: 'off',
+  |       ironcrunch_summary_button: 'off',
+  |       ironcrunch_proficiencies_button: 'off',
+  |       ironcrunch_bonds_page: 'off',
+  |       ironcrunch_summary_page: 'off',
+  |       ironcrunch_proficiencies_page: 'off',
+  |       ironcrunch_vows_page: 'on'
+  |     });
+  |   } else {
+  |     setAttrs({
+  |       ironcrunch_vows_page: 'off'
+  |     });
+  |   };
+  | });
+
+  | on('change:ironcrunch_bonds_button', function(eventinfo) {
+  |   if (eventinfo.newValue == 'on') {
+  |     setAttrs({
+  |       ironcrunch_vows_button: 'off',
+  |       ironcrunch_summary_button: 'off',
+  |       ironcrunch_proficiencies_button: 'off',
+  |       ironcrunch_vows_page: 'off',
+  |       ironcrunch_summary_page: 'off',
+  |       ironcrunch_proficiencies_page: 'off',
+  |       ironcrunch_bonds_page: 'on'
+  |     });
+  |   } else {
+  |     setAttrs({
+  |       ironcrunch_bonds_page: 'off'
+  |     });
+  |   };
+  | });
+
+  | on('change:ironcrunch_proficiencies_button', function(eventinfo) {
+  |   if (eventinfo.newValue == 'on') {
+  |     setAttrs({
+  |       ironcrunch_bonds_button: 'off',
+  |       ironcrunch_summary_button: 'off',
+  |       ironcrunch_vows_button: 'off',
+  |       ironcrunch_bonds_page: 'off',
+  |       ironcrunch_summary_page: 'off',
+  |       ironcrunch_vows_page: 'off',
+  |       ironcrunch_proficiencies_page: 'on'
+  |     });
+  |   } else {
+  |     setAttrs({
+  |       ironcrunch_proficiencies_page: 'off'
+  |     });
+  |   };
+  | });
+
   | var updateMaxHealth = function() {
   |   getAttrs(['iron'], function(v) {
   |     let max_health = (v.iron*4)+16
