Back to one roll button per skill; added roll buttons for weapons; cosmetic changes

--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -496,9 +496,6 @@ div.repcontrol {
 /************************************    TOGGLES **************************************/
 /* edit view h2 and h3 arrows*/
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section,
-.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button,
-.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + span,
-.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + span + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-nontable-name,
@@ -1039,18 +1036,6 @@ input.sheet-fs-beneficeaffliction {
     margin-left: 3px;
 }
 
-.sheet-fs-characteristic label input[type="radio"],
-.sheet-fs-skill label input[type="radio"] {
-    display: none;
-}
-
-.sheet-fs-characteristic label input:checked + span,
-.sheet-fs-skill label input:checked + span {
-    text-decoration: underline;
-    color: #4a6486;
-    text-decoration-color: #4a6486;
-}
-
 h2.sheet-fs-clickheader {
     font-size: 120%;
 }
@@ -1081,7 +1066,7 @@ h2.sheet-fs-clickheader {
     grid-column: 1 / -1;
     width:100%;
     padding-top: 5px;
-    height: 5px;
+    max-height: 5px;
 }
 
 .sheet-fs-table .sheet-fs-notes:focus,
@@ -1089,17 +1074,38 @@ h2.sheet-fs-clickheader {
 .sheet-fs-table input:active ~ .sheet-fs-notes,
 .sheet-fs-table input:focus ~ .sheet-fs-notes {
     min-height: 4em;
-    display: inline-block;
+    max-height: initial;
+    resize: vertical;
+    overflow:auto;
+    align-self: stretch;
+    /*display: inline-block;*/
 }
 
-.sheet-fs-weapons .sheet-fs-table { grid-template-columns: 1.5fr 25px 60px 28px 32px 60px 60px 60px 60px 60px; }
-.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(4) {
+.sheet-fs-weapons .sheet-fs-table { grid-template-columns: 30px 1.5fr 80px 120px 40px 28px 32px 60px 60px 40px 30px 40px 30px; }
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(6) {
     grid-column: span 2;
 }
-.sheet-fs-weapons .sheet-fs-table input:nth-child(1) {
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(5),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(6),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(7),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(8),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(9),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(10),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(11),
+.sheet-fs-weapons .sheet-fs-table .sheet-fs-table-head:nth-child(12) {
+    text-align: center;
+}
+.sheet-fs-weapons .sheet-fs-table input:nth-child(8) {
     font-weight: bold;
 }
-.sheet-fs-weapons .sheet-fs-table input:nth-child(n+2):nth-child(-n+10) {
+.sheet-fs-weapons .sheet-fs-table input:nth-child(11),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(13),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(14),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(15),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(16),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(17),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(18),
+.sheet-fs-weapons .sheet-fs-table input:nth-child(19) {
     text-align: center;
 }
 .sheet-fs-weapons fieldset, /* make preview similar */
@@ -1107,14 +1113,27 @@ h2.sheet-fs-clickheader {
     margin-bottom:5px;
 }
 
-.sheet-fs-armors .sheet-fs-table { grid-template-columns: 1.5fr 25px 28px 32px 60px 60px 60px 60px; }
-.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(3) {
+.sheet-fs-armors .sheet-fs-table { grid-template-columns: 1.5fr 28px 32px 60px 60px 60px 60px 25px; }
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(2) {
     grid-column: span 2;
+}
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(2),
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(3),
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(4),
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(5),
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(6),
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(7) {
+    text-align: center;
 }
 .sheet-fs-armors .sheet-fs-table input:nth-child(1) {
     font-weight: bold;
 }
-.sheet-fs-armors .sheet-fs-table input:nth-child(n+2):nth-child(-n+8) {
+.sheet-fs-armors .sheet-fs-table input:nth-child(3),
+.sheet-fs-armors .sheet-fs-table input:nth-child(4),
+.sheet-fs-armors .sheet-fs-table input:nth-child(5),
+.sheet-fs-armors .sheet-fs-table input:nth-child(6),
+.sheet-fs-armors .sheet-fs-table input:nth-child(7),
+.sheet-fs-armors .sheet-fs-table input:nth-child(8) {
     text-align: center;
 }
 .sheet-fs-armors fieldset, /* make preview similar */
@@ -1122,26 +1141,44 @@ h2.sheet-fs-clickheader {
     margin-bottom:5px;
 }
 
-.sheet-fs-combatactions .sheet-fs-table { grid-template-columns: 0.5fr 1fr 3fr; }
+.sheet-fs-combatactions .sheet-fs-table { grid-template-columns: 1fr 1.5fr 2.5fr; }
 .sheet-fs-combatactions .sheet-fs-table input:nth-child(2) {
     font-weight: bold;
 }
 
 .sheet-fs-psipowers .sheet-fs-table { grid-template-columns: 30px 0.5fr 25px 1fr 80px 120px 80px 80px 50px; }
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(4) {
+.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(3),
+.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(7),
+.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(8),
+.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(9) {
+    text-align: center;
+}
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(10) {
     font-weight: bold;
 }
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(1),
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(9) {
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(9),
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(13),
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(14),
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(15) {
     text-align: center;
 }
 
 .sheet-fs-theurgyrites .sheet-fs-table { grid-template-columns: 30px 0.5fr 25px 1fr 80px 120px 50px 80px 80px 50px; }
-.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(4) {
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(3),
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(7),
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(8),
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(9),
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(10) {
+    text-align: center;
+}
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(10) {
     font-weight: bold;
 }
-.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(1),
-.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(10) {
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(9),
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(13),
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(14),
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(15),
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(16) {
     text-align: center;
 }
 
