Added background image again to charsheet. Apparently a bug in the CSS had kept it working all this time

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -749,7 +749,9 @@ h1 {
 button {
     background-color: #7C0303;
 }
-button:hover {
+
+.charsheet,
+.charsheet button:hover {
     background-image: url("http://www.commentnation.com/backgrounds/images/parchment_paper_seamless_pattern.jpg");
 }
 
