- Added label around checkboxes in order to style them better.
- Added new styling for checkboxes inside a label

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -161,6 +161,7 @@ input.sheet-tab:not(:first-child)::before
 input[type="checkbox"] + span::before
 {
     content: "";
+    cursor: pointer;
     width: 14px;
     height: 14px;
     font-size: 12px;
@@ -172,11 +173,13 @@ input[type="checkbox"] + span::before
 input[type="checkbox"] + span::before
 {
     margin-right: 4px;
+    margin-left: 4px;
     border: solid 1px #a8a8a8;
     line-height: 14px;
     text-align: center;
     display: inline-block;
     vertical-align: middle;
+    font-weight: normal;
 
     -moz-box-shadow: 0 0 2px #ccc;
     -webkit-box-shadow: 0 0 2px #ccc;
@@ -471,7 +474,7 @@ input.sheet-tab + span::before
 
 label {
     display:inline;
-    font-size:.8125rem;
+    font-size: 12px;
     line-height:1em;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
@@ -1175,4 +1178,11 @@ button {
 
 .sheet-centering-padding-left {
     padding-left: 5px;
+}
+
+label input[type="checkbox"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
 }
