using second atrribute fior pages

--- a/Ironcrunch/src/Ironcrunch.pug
+++ b/Ironcrunch/src/Ironcrunch.pug
@@ -1,10 +1,10 @@
 
-//- Pages
-include ./pages/main.pug
+//- Sheet Index
+include ./pages/index
 
 //- Roll Templates
-include ./roll-templates/moves/moves.pug
-include ./roll-templates/progress/progress.pug
+include ./roll-templates/moves/moves
+include ./roll-templates/progress/progress
 
 //- Sheet Workers
-include ./workers/ironcrunch.pug
+include ./workers/ironcrunch
