--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -145,6 +145,9 @@ hr
 textarea
   font-family: 'Crimson Text', arial, sans-serif
 
+// Pages
+@import './pages/index'
+
 // Components
 @import './components/resources/resources'
 @import './components/misses/misses'
