--- a/Ironcrunch/src/components/nav/nav-bar.pug
+++ b/Ironcrunch/src/components/nav/nav-bar.pug
@@ -1,14 +1,14 @@
 - 
   var pages = [
-    { id: 'summary', text: 'Summary' },
-    { id: 'vows', text: 'Vows' },
-    { id: 'bonds', text: 'Bonds' },
-    { id: 'proficiencies', text: 'Proficiencies' }
+    { id: '1', text: 'Summary' },
+    { id: '2', text: 'Vows' },
+    { id: '3', text: 'Bonds' },
+    { id: '4', text: 'Proficiencies' }
   ]
 
 div.sheet-nav-bar
   each page in pages 
     div.sheet-nav-child
       label.sheet-page-label
-        input(type='checkbox' name=`attr_ironcrunch_${page.id}_button` class='sheet-hide sheet-page-button')
+        input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id)
         div.sheet-page-button-back=page.text
