--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -21,10 +21,10 @@
   background #4C4D4F
   color: white
 
-input[type=checkbox].sheet-bonds:checked ~ div.sheet-bonds,
-input[type=checkbox].sheet-summary:checked ~ div.sheet-summary,
-input[type=checkbox].sheet-vows:checked ~ div.sheet-vows,
-input[type=checkbox].sheet-proficiencies:checked ~ div.sheet-proficiencies
+input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
+input[type=radio].sheet-summary:checked ~ div.sheet-summary,
+input[type=radio].sheet-vows:checked ~ div.sheet-vows,
+input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
   display block
 
 .sheet-summary
