--- a/Ironcrunch/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/workers/Ironcrunch.pug
@@ -246,6 +246,18 @@ script(type="text/worker")
   |   };
   | });
 
+  | on('change:character_page_button', function(eventinfo) {
+  |   setAttrs({
+  |     character_page: eventinfo.newValue
+  |   });
+  | });
+
+  | on('change:mode_button', function(eventinfo) {
+  |   setAttrs({
+  |     mode: eventinfo.newValue
+  |   });
+  | });
+
   | var updateMaxHealth = function() {
   |   getAttrs(['iron'], function(v) {
   |     let max_health = (v.iron*4)+16
