--- a/Ironcrunch/src/components/header/companion.pug
+++ b/Ironcrunch/src/components/header/companion.pug
@@ -2,9 +2,9 @@
 div.sheet-header
   div.sheet-header-items
     div.sheet-character-name
-      h3.sheet-character-title Character
+      h3.sheet-character-title COMPANION
       input(type='text' class='sheet-pc-name' name='attr_character_name' placeholder='Character Name')
     div.sheet-character-role
-      h3.sheet-character-title Role / Title
-      input(type='text' class='sheet-pc-name' name='attr_character_role' placeholder='Character Role/Title')
+      h3.sheet-character-title ROLE / TITLE
+      input(type='text' class='sheet-pc-name' name='attr_character_role' placeholder='Character Role / Title')
   include ../resources/resources
