--- a/Ironcrunch/src/pages/proficiencies.pug
+++ b/Ironcrunch/src/pages/proficiencies.pug
@@ -1,4 +1,4 @@
-input(type='checkbox' name='attr_ironcrunch_proficiencies_page' class='sheet-proficiencies sheet-hide')
+input(type='radio' name='attr_character_page' class='sheet-proficiencies sheet-hide' value='4')
 div.sheet-proficiencies.sheet-hide
   h3.sheet-divide &emsp;WEAPON PROFICIENCIES&emsp;
   include ../components/proficiencies/weapons
