--- a/Ironcrunch/src/pages/summary.pug
+++ b/Ironcrunch/src/pages/summary.pug
@@ -1,4 +1,4 @@
-input(type='checkbox' name='attr_ironcrunch_summary_page' class='sheet-summary sheet-hide' checked)
+input(type='radio' name='attr_character_page' class='sheet-summary sheet-hide' value='1' checked)
 div.sheet-summary.sheet-hide
   include ../components/details/details
   include ../components/stats/stats
