--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -151,6 +151,8 @@ hr {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
+/* Nav Menu */
+
 hr.sheet-nav-top {
     margin-top: 0.5em;
     margin-bottom: 0.2em;
